<resources>
    <string name="app_name">KimyChat</string>
    <string name="intro">Kết nối dễ dàng với gia đình và bạn bè của bạn qua các quốc gia</string>
    <string name="policy">Terms &amp; Privacy Policy</string>
    <string name="start_messaging">Start Messaging</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">Please confirm your country code and enter your phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="str_continue">Continue</string>
    <string name="please_enter_the_otp_sent_to_your_phone_number">Please enter the OTP sent to your phone number</string>
    <string name="otp_number">OTP number</string>
    <string name="kimychat_loading">KimyChat Loading</string>
    <string name="app_develop">App Develop by Khiêm Đỗ</string>
    <string name="action">Hành động này có thể mất vài giây</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="facebook_app_id">1581441675541411</string>
    <string name="fb_login_protocol_scheme">fb1581441675541411</string>
    <string name="message">Tin nhắn</string>
    <string name="contacts">Danh bạ</string>
    <string name="more_info">Thông tin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>